--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rvm:
   - 2.2.8
   - 2.3.5
   - 2.4.2
+before_install:
+  - gem update --system
+  - gem install bundler
 script:
   - bundle exec rake
   - bundle exec rake submitcodeclimate
