--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.8-dev"
 
 install:
-  - pip install -r requirements.txt --ignore-requires-pytho
+  - pip install -r requirements.txt --ignore-requires-python
 
 script: python -m unittest
 
