--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-appdirs==1.4.3
 asn1crypto==0.24.0
 attrs==19.1.0
 beautifulsoup4==4.7.1
-black==19.3b0
-bs4==0.0.1
-certifi==2019.3.9
+certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
-Click==7.0
 colorama==0.4.1
 cryptography==2.5
 dnspython==1.16.0
@@ -15,17 +11,18 @@ idna==2.8
 jsonschema==3.0.1
 nassl==2.2.0
 packaging==19.0
-psutil==5.6.2
-publicsuffixlist==0.6.7
+pipenv==2018.11.26
+psutil==5.6.3
+publicsuffixlist==0.6.8
 pycparser==2.19
 pyparsing==2.4.0
 pyrsistent==0.15.2
 requests==2.22.0
 six==1.12.0
 soupsieve==1.9.1
-sslyze==2.1.2
+sslyze==2.1.3
 tls-parser==1.2.1
-toml==0.10.0
 urllib3==1.25.3
 validator-collection==1.3.5
-yappi==1.0
+virtualenv==16.6.1
+virtualenv-clone==0.5.3
