Fix package building

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Debug Info - Env
       run: set
+      shell: bash {0}
 
     - name: Debug Info - Runner
       env:
@@ -38,13 +39,14 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade pipenv
         pipenv sync --dev
+      shell: bash {0}
 
     - name: Setup Selenium (Windows)
       if: runner.os == 'Windows'
       run: |
-        choco install chromedriver --version 75.0.3770.1400
-        pipenv run echo %PATH%
+        choco install chromedriver --version=77.0.3865.400
         pipenv run where chromedriver
+      shell: bash {0}
 
     - name: Setup Selenium (Linux)
       if: runner.os == 'Linux'
@@ -67,6 +69,7 @@ jobs:
         export PATH="/home/runner/work/yawast/yawast:$PATH"
         echo $PATH
         which chromedriver
+      shell: bash {0}
 
     - name: Setup Selenium (macOS)
       if: runner.os == 'macOS'
@@ -75,6 +78,7 @@ jobs:
         brew tap homebrew/cask
         brew cask install chromedriver
         brew cask install google-chrome
+      shell: bash {0}
 
     - name: Test with unittest
       run: |
@@ -94,6 +98,7 @@ jobs:
       run: |
         pipenv run python setup.py sdist
         pipenv run python setup.py bdist_wheel
+      shell: bash {0}
 
     - name: Run version (all)
       run: |
