Update requirements to build

--- a/Pipfile
+++ b/Pipfile
@@ -4,34 +4,32 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-mypy = "*"
+mypy = ">=1.15.0,<2.0.0"
 coverage = "*"
-cx_Freeze = {git = "https://github.com/anthony-tuininga/cx_Freeze.git"}
 wheel = "*"
-black = "==19.3b0"
-requirementslib = "*"
+black = ">=25.0,<26.0.0"
 
 [packages]
 yawast = {editable = true,path = "."}
-sslyze = "==2.1.4"
-requests-mock = "*"
-jsonschema = "~=2.6"
-validator-collection = "*"
+sslyze = "==6.0.0"
+requests-mock = ">=1.12,<2.0.0"
+jsonschema = ">=4.0,<5.0.0"
+validator-collection = ">=1.5.0,<2.0.0"
 requests = "*"
-publicsuffixlist = "*"
-dnspython = "*"
+publicsuffixlist = ">=1.0.0,<2.0.0"
+dnspython = ">=2.7,<3.0.0"
 urllib3 = "*"
-colorama = "*"
-nassl = "*"
-cryptography = "==2.5"
-packaging = "*"
-beautifulsoup4 = "*"
-psutil = "*"
-selenium = "*"
-setuptools = "*"
-ordered-set = "*"
-requirementslib = "*"
-python-dateutil = "*"
+colorama = ">=0.4.0,<0.5.0"
+nassl = ">=5.2,<6"
+cryptography = ">42,<43"
+packaging = ">=24.2,<25.0"
+beautifulsoup4 = ">=4.13.0,<5.0.0"
+psutil = ">=7.0,<8.0.0"
+selenium = ">=4.30,<5.0.0"
+setuptools = ">=78.1,<79.0.0"
+ordered-set = ">=4.1.0,<5.0.0"
+requirementslib = ">=3.0.0,<4.0.0"
+python-dateutil = ">=2.9.0,<3.0.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.12"
