--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,35 +1,60 @@
-appdirs==1.4.3
-attrs==19.3.0
-black==19.3b0
-cached-property==1.5.1
-cerberus==1.3.2
-certifi==2019.11.28
-chardet==3.0.4
-click==7.0
-colorama==0.4.3
-coverage==5.0.1
-distlib==0.3.0
-first==2.0.2
-git+https://github.com/anthony-tuininga/cx_Freeze.git@026c9af3b55fe80e08eac0d088438faa39e3ee77#egg=cx-freeze
-idna==2.8
-importlib-metadata==1.3.0 ; python_version < '3.8'
-more-itertools==8.0.2
-mypy-extensions==0.4.3
-mypy==0.761
-orderedmultidict==1.0.1
-packaging==19.2
-pep517==0.8.1
-pip-shims==0.4.0
-plette[validation]==0.2.3
-pyparsing==2.4.6
-requests==2.22.0
-requirementslib==1.5.3
-six==1.13.0
-toml==0.10.0
-tomlkit==0.5.8
-typed-ast==1.4.0
-typing-extensions==3.7.4.1
-urllib3==1.25.7
-vistir==0.4.3
-wheel==0.33.6
-zipp==0.6.0 ; python_version < '3.8'
+-i https://pypi.org/simple
+black==25.1.0; python_version >= '3.9'
+click==8.1.8; python_version >= '3.7'
+coverage==7.8.0; python_version >= '3.9'
+mypy==1.15.0; python_version >= '3.9'
+mypy-extensions==1.0.0; python_version >= '3.5'
+packaging==24.2; python_version >= '3.8'
+pathspec==0.12.1; python_version >= '3.8'
+platformdirs==4.3.7; python_version >= '3.9'
+typing-extensions==4.13.0; python_version >= '3.8'
+wheel==0.45.1; python_version >= '3.8'
+annotated-types==0.7.0; python_version >= '3.8'
+attrs==25.3.0; python_version >= '3.8'
+beautifulsoup4==4.13.3; python_full_version >= '3.7.0'
+cerberus==1.3.7; python_version >= '3.7'
+certifi==2025.1.31; python_version >= '3.6'
+cffi==1.17.1; python_version >= '3.8'
+charset-normalizer==3.4.1; python_version >= '3.7'
+colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+cryptography==42.0.8; python_version >= '3.7'
+distlib==0.3.9
+dnspython==2.7.0; python_version >= '3.9'
+h11==0.14.0; python_version >= '3.7'
+idna==3.10; python_version >= '3.6'
+jsonschema==4.23.0; python_version >= '3.8'
+jsonschema-specifications==2024.10.1; python_version >= '3.9'
+nassl==5.2.0; python_version >= '3.8'
+ordered-set==4.1.0; python_version >= '3.7'
+outcome==1.3.0.post0; python_version >= '3.7'
+pep517==0.13.1; python_version >= '3.6'
+pip==25.0.1; python_version >= '3.8'
+plette[validation]==2.1.0; python_version >= '3.7'
+psutil==7.0.0; python_version >= '3.6'
+publicsuffixlist==1.0.2.20250329; python_version >= '3.5'
+pycparser==2.22; python_version >= '3.8'
+pydantic==2.6.4; python_version >= '3.8'
+pydantic-core==2.16.3; python_version >= '3.8'
+pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+referencing==0.36.2; python_version >= '3.9'
+requests==2.32.3; python_version >= '3.8'
+requests-mock==1.12.1; python_version >= '3.5'
+requirementslib==3.0.0; python_version >= '3.7'
+rpds-py==0.24.0; python_version >= '3.9'
+selenium==4.30.0; python_version >= '3.9'
+setuptools==78.1.0; python_version >= '3.9'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+sniffio==1.3.1; python_version >= '3.7'
+sortedcontainers==2.4.0
+soupsieve==2.6; python_version >= '3.8'
+sslyze==6.0.0; python_version >= '3.8'
+tls-parser==2.0.1; python_version >= '3.7'
+tomlkit==0.13.2; python_version >= '3.8'
+trio==0.29.0; python_version >= '3.9'
+trio-websocket==0.12.2; python_version >= '3.8'
+urllib3[socks]==2.3.0; python_version >= '3.9'
+validator-collection==1.5.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
+websocket-client==1.8.0; python_version >= '3.8'
+wsproto==1.2.0; python_full_version >= '3.7.0'
+-e .
