--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,53 @@
-appdirs==1.4.3
-asn1crypto==1.2.0
-attrs==19.3.0
-beautifulsoup4==4.8.2
-cached-property==1.5.1
-cerberus==1.3.2
-certifi==2019.11.28
-cffi==1.13.2
-chardet==3.0.4
-colorama==0.4.3
-cryptography==2.5
-distlib==0.3.0
-dnspython==1.16.0
-first==2.0.2
-idna==2.8
-importlib-metadata==1.3.0 ; python_version < '3.8'
-jsonschema==2.6.0
-more-itertools==8.0.2
-nassl==2.2.0
-ordered-set==3.1.1
-orderedmultidict==1.0.1
-packaging==19.2
-pep517==0.8.1
-pip-shims==0.4.0
-plette[validation]==0.2.3
-psutil==5.6.7
-publicsuffixlist==0.6.11
-pycparser==2.19
-pyparsing==2.4.6
-python-dateutil==2.8.1
-requests-mock==1.7.0
-requests==2.22.0
-requirementslib==1.5.3
-selenium==3.141.0
-six==1.13.0
-soupsieve==1.9.5
-sslyze==2.1.4
-tls-parser==1.2.1
-toml==0.10.0
-tomlkit==0.5.8
-urllib3==1.25.7
-validator-collection==1.4.0
-vistir==0.4.3
-wheel==0.33.6
-zipp==0.6.0 ; python_version < '3.8'
+-i https://pypi.org/simple
+annotated-types==0.7.0; python_version >= '3.8'
+attrs==25.3.0; python_version >= '3.8'
+beautifulsoup4==4.13.3; python_full_version >= '3.7.0'
+cerberus==1.3.7; python_version >= '3.7'
+certifi==2025.1.31; python_version >= '3.6'
+cffi==1.17.1; python_version >= '3.8'
+charset-normalizer==3.4.1; python_version >= '3.7'
+colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+cryptography==42.0.8; python_version >= '3.7'
+distlib==0.3.9
+dnspython==2.7.0; python_version >= '3.9'
+h11==0.14.0; python_version >= '3.7'
+idna==3.10; python_version >= '3.6'
+jsonschema==4.23.0; python_version >= '3.8'
+jsonschema-specifications==2024.10.1; python_version >= '3.9'
+nassl==5.2.0; python_version >= '3.8'
+ordered-set==4.1.0; python_version >= '3.7'
+outcome==1.3.0.post0; python_version >= '3.7'
+packaging==24.2; python_version >= '3.8'
+pep517==0.13.1; python_version >= '3.6'
+pip==25.0.1; python_version >= '3.8'
+platformdirs==4.3.7; python_version >= '3.9'
+plette[validation]==2.1.0; python_version >= '3.7'
+psutil==7.0.0; python_version >= '3.6'
+publicsuffixlist==1.0.2.20250329; python_version >= '3.5'
+pycparser==2.22; python_version >= '3.8'
+pydantic==2.6.4; python_version >= '3.8'
+pydantic-core==2.16.3; python_version >= '3.8'
+pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+referencing==0.36.2; python_version >= '3.9'
+requests==2.32.3; python_version >= '3.8'
+requests-mock==1.12.1; python_version >= '3.5'
+requirementslib==3.0.0; python_version >= '3.7'
+rpds-py==0.24.0; python_version >= '3.9'
+selenium==4.30.0; python_version >= '3.9'
+setuptools==78.1.0; python_version >= '3.9'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+sniffio==1.3.1; python_version >= '3.7'
+sortedcontainers==2.4.0
+soupsieve==2.6; python_version >= '3.8'
+sslyze==6.0.0; python_version >= '3.8'
+tls-parser==2.0.1; python_version >= '3.7'
+tomlkit==0.13.2; python_version >= '3.8'
+trio==0.29.0; python_version >= '3.9'
+trio-websocket==0.12.2; python_version >= '3.8'
+typing-extensions==4.13.0; python_version >= '3.8'
+urllib3[socks]==2.3.0; python_version >= '3.9'
+validator-collection==1.5.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
+websocket-client==1.8.0; python_version >= '3.8'
+wsproto==1.2.0; python_full_version >= '3.7.0'
+-e .
