--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: YAWAST ...where a pentest starts
+title: yawast-ng ...where a pentest starts
 email: adam@adamcaudill.com
 description: >- # this means to ignore newlines until "baseurl:"
-  YAWAST is an application meant to simplify initial analysis and information gathering
+  yawast-ng is an application meant to simplify initial analysis and information gathering
   for penetration testers and security auditors.
 baseurl: "/yawast-ng" # the subpath of your site, e.g. /blog
 url: "https://numorian.github.io" # the base hostname & protocol for your site, e.g. http://example.com
