--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ selenium = ">=4.30,<5.0.0"
 setuptools = ">=78.1,<79.0.0"
 ordered-set = ">=4.1.0,<5.0.0"
 python-dateutil = ">=2.9.0,<3.0.0"
+webdriver-manager = "*"
 
 [requires]
 python_version = "3.12"
