--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,13 +12,11 @@ wheel==0.45.1; python_version >= '3.8'
 annotated-types==0.7.0; python_version >= '3.8'
 attrs==25.3.0; python_version >= '3.8'
 beautifulsoup4==4.13.3; python_full_version >= '3.7.0'
-cerberus==1.3.7; python_version >= '3.7'
 certifi==2025.1.31; python_version >= '3.6'
 cffi==1.17.1; python_version >= '3.8'
 charset-normalizer==3.4.1; python_version >= '3.7'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cryptography==42.0.8; python_version >= '3.7'
-distlib==0.3.9
 dnspython==2.7.0; python_version >= '3.9'
 h11==0.14.0; python_version >= '3.7'
 idna==3.10; python_version >= '3.6'
@@ -27,9 +25,6 @@ jsonschema-specifications==2024.10.1; python_version >= '3.9'
 nassl==5.2.0; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
-pep517==0.13.1; python_version >= '3.6'
-pip==25.0.1; python_version >= '3.8'
-plette[validation]==2.1.0; python_version >= '3.7'
 psutil==7.0.0; python_version >= '3.6'
 publicsuffixlist==1.0.2.20250329; python_version >= '3.5'
 pycparser==2.22; python_version >= '3.8'
@@ -37,10 +32,10 @@ pydantic==2.6.4; python_version >= '3.8'
 pydantic-core==2.16.3; python_version >= '3.8'
 pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dotenv==1.1.0; python_version >= '3.9'
 referencing==0.36.2; python_version >= '3.9'
 requests==2.32.3; python_version >= '3.8'
 requests-mock==1.12.1; python_version >= '3.5'
-requirementslib==3.0.0; python_version >= '3.7'
 rpds-py==0.24.0; python_version >= '3.9'
 selenium==4.30.0; python_version >= '3.9'
 setuptools==78.1.0; python_version >= '3.9'
@@ -50,11 +45,11 @@ sortedcontainers==2.4.0
 soupsieve==2.6; python_version >= '3.8'
 sslyze==6.0.0; python_version >= '3.8'
 tls-parser==2.0.1; python_version >= '3.7'
-tomlkit==0.13.2; python_version >= '3.8'
 trio==0.29.0; python_version >= '3.9'
 trio-websocket==0.12.2; python_version >= '3.8'
 urllib3[socks]==2.3.0; python_version >= '3.9'
 validator-collection==1.5.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
+webdriver-manager==4.0.2; python_version >= '3.7'
 websocket-client==1.8.0; python_version >= '3.8'
 wsproto==1.2.0; python_full_version >= '3.7.0'
 -e .
