Add memory profiler

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ mypy = ">=1.15.0,<2.0.0"
 coverage = "*"
 wheel = "*"
 black = ">=25.0,<26.0.0"
+memray = "*"
 
 [packages]
 yawast = {editable = true,path = "."}
