--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ black = ">=25.0,<26.0.0"
 memray = "*"
 
 [packages]
-yawast = {editable = true,path = "."}
+yawast-ng = {editable = true,path = "."}
 sslyze = "==6.0.0"
 requests-mock = ">=1.12,<2.0.0"
 jsonschema = ">=4.0,<5.0.0"
